src/yini_test/cases/golden/strict/valid/concatenation/string-plus-string-multiple.strict.yini
@yini strict

^ Concat
message = "a" + "b" + "c"

/END

