src/yini_test/cases/golden/strict/invalid/concatenation/string-plus-boolean.strict.yini
@yini strict

^ Concat
message = "active: " + true

/END

